--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,6 @@
     android:orientation="vertical"
     tools:context="com.concepts.android.ridecellmaptest.ui.input.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <EditText
         android:id="@+id/main_origin"
         android:layout_width="match_parent"
@@ -36,6 +27,7 @@
 
     <Button
         android:id="@+id/main_btn"
+        android:text="@string/go"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
